<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/Portfolio">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TableLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:context="com.example.android.myappportfolio.PortfolioFragment">

            <TableRow style="@style/Portfolio.TableRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portfolio_header"
                    style="@style/Portfolio.AppHeader" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">

                <Button
                    android:id="@+id/spotify_streamer_btn"
                    android:text="@string/spotify_streamer_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.AppButton" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">
                <Button
                    android:id="@+id/football_scores_btn"
                    android:text="@string/football_scores_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.AppButton" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">
                <Button
                    android:id="@+id/library_app_btn"
                    android:text="@string/library_app_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.AppButton" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">
                <Button
                    android:id="@+id/build_it_bigger_btn"
                    android:text="@string/build_it_bigger_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.AppButton" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">
                <Button
                    android:id="@+id/xyz_reader_btn"
                    android:text="@string/xyz_reader_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.AppButton" />
            </TableRow>

            <TableRow style="@style/Portfolio.TableRow">
                <Button
                    android:id="@+id/capstone_btn"
                    android:text="@string/capstone_text"
                    android:onClick="showMessage"
                    style="@style/Portfolio.CapstoneButton" />
            </TableRow>

        </TableLayout>
    </RelativeLayout>
</ScrollView>